# src/api/docs/swagger-output.json
@@ -932,22 +932,6 @@
           "categoryName": {
             "type": "string",
             "example": "Electronics"
-          },
-          "createdDate": {
-            "type": "string",
-            "example": "2024-10-01T10:00:00Z"
-          },
-          "updatedDate": {
-            "type": "string",
-            "example": "2024-10-05T10:00:00Z"
-          },
-          "createdBy": {
-            "type": "number",
-            "example": 1
-          },
-          "updatedBy": {
-            "type": "number",
-            "example": 1
           }
         },
         "xml": {
